--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
+    <h1>One of Mother Nature's Gifts is Green Tea</h1>
     <div>
       <ul>
         <li><a href="#contact"></a></li>
-        <li></li>
-        <li></li>
-        <li></li>
       </ul>
-      <h1>One of Mother Nature's Gifts is Green Tea</h1>
     </div>
     <div>
       <h2>A matcha latte is one good way to enjoy green tea</h2>
-      <img id="img_mod" href="stylesheet" src="assets/hot_matcha.jpg" />S
+      <img id="img_mod" href="stylesheet" src="assets/hot_matcha.jpg" />
     </div>
-    <div id="contact" class="contact">
+    <div id="contact" class="form">
       <form>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" /><br /><br />
