improved css styling for nav bar and form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <h1>One of Mother Nature's Gifts is Green Tea</h1>
     <div>
       <ul>
         <li>
@@ -16,22 +15,35 @@
             >Green Tea Wikipedia Page</a
           >
         </li>
-        <li><a href="#contact"></a></li>
+        <li><a href="#contact_form" id="contact_form">Contact</a></li>
+        <li><a href="https://github.com/guevarajp">Github</a></li>
       </ul>
     </div>
+    <h1>One of Mother Nature's Gifts is Green Tea</h1>
     <div>
       <h2>A matcha latte is one good way to enjoy green tea</h2>
-      <img id="img_mod" href="stylesheet" src="assets/hot_matcha.jpg" />
+      <img
+        id="img_mod"
+        href="stylesheet"
+        src="assets/hot_matcha.jpg"
+        alt="A cup of hot matcha green tea"
+      />
     </div>
-    <div id="contact" class="form">
-      <form>
+    <div class="form">
+      <form href="#contact_form">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" /><br /><br />
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" /><br /><br />
       </form>
+      <button id="format_button" type="submit">Send</button>
     </div>
-
-    <p></p>
+    <div>
+      <footer>
+        <h3>
+          <p>&copy; Jonathan Guevara</p>
+        </h3>
+      </footer>
+    </div>
   </body>
 </html>
