add message input field

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <input type="text" id="name" name="name" /><br /><br />
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" /><br /><br />
+        <label for="message">Message:</label>
+        <input type="text" id="message" name="message" /><br /><br />
       </form>
       <button id="format_button" type="submit">Send</button>
     </div>
