added styling to 'Contact Us' heading

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>A matcha latte is one good way to enjoy green tea</h2>
     </div>
     <div class="form">
-      <h2>Contact Us</h2>
+      <h2 class="contact">Contact Us</h2>
       <form>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" /><br /><br />
