styling for contact form

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         <input type="text" id="name" name="name" /><br /><br />
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" /><br /><br />
-        <label for="message">Message:</label>
         <textarea
           id="message"
           name="message"
           placeholder="Begin message..."
           style="height: 200px"
+          ;
+          style="width: 300px"
           ;
         ></textarea
         ><br /><br />
